# smartcar

./: .flake8  .gitignore  .gitignore.swp  .pre-commit-config.yaml  LICENSE  README.md  manage.py  pyproject.toml  requirements.txt
django_smartcar/: asgi.py  settings.py  urls.py  wsgi.py
scripts/: .test_dotenv.py.swp  test_dotenv.py
smartcar_app/: apps.py  urls.py  views.py
