[tool.poetry]
name = "merilyn's smartcar"
version = "0.1.0"
description = ""
authors = ["merilyn chesler"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
smartcar = "^6.3.0"
pp-ez = "^0.2.0"
isort = "^5.13.2"
flake8 = "^7.1.0"
pre-commit = "^3.7.1"

[tool.isort]
profile = "black"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
